<resources>
    <string name="app_name">Touristy - CG Tourism app</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_destinations">Destinations</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_tourism_info_center">Tourism Info Center</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_enter_map_mode">Enter MAP Mode</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_browse_website">Browse Website</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Destinations</item>
        <item>Notifications</item>
        <item>Tourism Info Center</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--for cardview landing page gallery-->
    <string name="action_add_favourite">Open</string>
    <string name="action_play_next">Add to favourites</string>
    <string name="backdrop_title">Explore Chhattisgarh</string>
    <string name="backdrop_subtitle">full of surprises</string>


</resources>
