<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_destinations"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_destinations" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_tourism_info_center"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_tourism_info_center" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:title="@string/nav_gallery" />

            <item
                android:id="@+id/nav_enter_map_mode"
                android:title="@string/nav_enter_map_mode" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>